# qgroundcontrol

./: .gitignore  CMakeLists.txt  qgcimages.qrc  qgcresources.qrc  qgroundcontrol.qrc
cmake/find-modules/: FindGStreamer.cmake
src/: GPSRtk.h  QGCApplication.cc  main.cc
src/API/: QGCCorePlugin.cc
src/AnalyzeView/: CMakeLists.txt  NxFileTransferController.cc  NxFileTransferController.h  NxFileTransferPage.qml  TcpClient.cc  TcpClient.h  TcpFileClient.cpp  TcpFileClient.h  TcpFileTransferController.cpp  TcpFileTransferController.h  TcpFileTransferPage.qml  TestNxFileServer.cc  TestNxFileServer.h
src/AnalyzeView/TcpFileTransfer/: NxFileTransferController.cc  NxFileTransferController.h  NxFileTransferPage.qml  tcpclient.cpp  tcpclient.h
src/Comms/TCPFileTransfer/: tcpserver.h
src/FlightDisplay/: FlyViewBottomToolStrip.qml  FlyViewBottomToolStripActiveButton.qml  FlyViewBottomToolStripButton.qml  FlyViewBottomToolStripConfirm.qml  FlyViewBottomToolStripOriginButton.qml  FlyViewBottomToolStripSetOrigin.qml  FlyViewWidgetLayer.qml
src/QmlControls/: QGroundControlQmlGlobal.cc
src/QmlControls/QGroundControl/FlightDisplay/: qmldir
src/Utilities/: SignalHandler.cc
src/Vehicle/: CMakeLists.txt
src/Vehicle/UdpLink/: CustomCommandSender.cpp  CustomCommandSender.h  UdpCommandLink.cpp  UdpCommandLink.h
tcptointegrate/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp
tcptointegrate/android/: AndroidManifest.xml  android_deployment.cmake  gradle.properties
tcptointegrate/android/src/org/example/tcp2/: StoragePermissionHelper.java
tcptointegrate/resources/: app_icon.rc
